--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,30 +2,28 @@ version: '3'
 services:
 
   frontend:
-    image: bicy-nextjs:0.0.1
+    image: bicy-nextjs-prod:0.0.1
     build:
       context: ./bicyrent-app
-      dockerfile: ../provision/frontend/development/Dockerfile
+      dockerfile: ../provision/frontend/production/Dockerfile
+    environment:
+      - NODE_ENV=production
     ports:
       - "3000:3000"
-    command: /usr/bin/tini -- yarn dev
     stdin_open: true
     tty: true
     networks:
       - main
-    env_file:
-      - .env
-    volumes:
-      - ./bicyrent-app:/home/app
-      - nodemodules:/home/app/node_modules
     depends_on:
       - database
 
   backend:
-    image: bicy-ruby:0.0.1
+    image: bicy-ruby-prod:0.0.1
     build:
       context: ./backend
-      dockerfile: ../provision/backend/development/Dockerfile
+      dockerfile: ../provision/backend/production/Dockerfile
+    environment:
+      - RAILS_ENV=production
     ports:
       - "3001:3001"
     stdin_open: true
@@ -46,7 +44,7 @@ services:
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_DB=bicyrent_development
+      - POSTGRES_DB=bicyrentApp
     volumes:
       - database:/var/lib/postgresql/data
     networks:
@@ -56,7 +54,6 @@ services:
 
 volumes:
   database:
-  nodemodules:
 
 
 networks:
